refactor: Remove authentication from product routes
This commit removes the authentication middleware (protect and dmin) from the product routes, making all product-related endpoints public. This is a temporary measure for debugging purposes.

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,10 @@ PORT=3000
 # Clave secreta para firmar JWT
 JWT_SECRET=super_secreto_cambia_esto
 
-# Configuración de Firebase (copiadas de tu proyecto en Firebase Console)
-const firebaseConfig={
-    apiKey: "AIzaSyA3Qn7tafgUTqxpKGZrzZwCwAeOMRjjzws",
-    authDomain: "tienda-terminalsf.firebaseapp.com",
-    projectId: "tienda-terminalsf",
-    storageBucket: "tienda-terminalsf.firebasestorage.app",
-    messagingSenderId: "321581969820",
-    appId: "1:321581969820:web:7136088bb1cac0d4591859",
-};
+# Configuración de Firebase (copiadas del proyecto en Firebase Console)
+FIREBASE_API_KEY=AIzaSyA3Qn7tafgUTqxpKGZrzZwCwAeOMRjjzws
+FIREBASE_AUTH_DOMAIN=tienda-terminalsf.firebaseapp.com
+FIREBASE_PROJECT_ID=tienda-terminalsf
+FIREBASE_STORAGE_BUCKET=tienda-terminalsf.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=321581969820
+FIREBASE_APP_ID=1:321581969820:web:7136088bb1cac0d4591859
