--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "firebase": "^9.23.0"
+    "firebase": "^9.23.0",
+    "jsonwebtoken": "^9.0.3"
   }
 }
